<resources>
    <string name="app_name">proconomy app</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="Enter_Email">Enter your email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="skip_this">Skip  this</string>
    <string name="get_expert_">Get expert advice for any field you want to pursue.</string>
    <string name="which_appli">Which applies to you?</string>
    <string name="i_m_mentor">I\'m a mentor</string>
    <string name="i_m_mentee">I\'m a mentee</string>
    <string name="first_time">Is this your first time\?</string>
    <string name="new_time">Yes, I\'m new to this</string>
    <string name="get_basics">Nope, I get the basics</string>
    <string name="basic_info_mentor">Let\'s get some basic info</string>
    <string name="get_start">Let\'s get started.</string>
    <string name="this_will_display_on_your_public_profile">This will display on your public profile</string>
    <string name="monetize">Monetize your career advice.</string>
    <string name="give_advice">Give advice. Create opportunities.</string>
    <string name="email_password.">Enter your access email &amp; password.</string>
    <string name="enter_pass">Enter your password</string>
    <string name="reenter_pass">Re-enter your password</string>
    <string name="hey_mentor">Hey there, Mentor!</string>
    <string name="set_up">Let\'s setup your account access</string>
    <string name="required">Required</string>
    <string name="Enter_first">Enter first name</string>
    <string name="Enter_last">Enter last name</string>
    <string name="get_advice">Get advice. Create opportunities.</string>
    <string name="hire">Hire your next career mentor.</string>
    <string name="get_insider">Get insiders from experienced industry expert.</string>
    <string name="your_name">Your name is?</string>
    <string name="create_your">Create your account.</string>
    <string name="set_up_your">Set up your account, get  access to your account dashboard, and start searching for your career mentor.</string>
    <string name="give_industr">Get industry-standard advice.</string>
    <string name="get_listed_">"Work directly with a mentor and received services that will you help you get to the next best place in your career. "</string>
    <string name="personalize_brand">Personalize your brand.</string>
    <string name="personalize_brand_text">Personalize your brand and build the ideal profile to suit your needs and business model.</string>
    <string name="get_industr">Get industry-standard advice.</string>
    <string name="work_direct">"Work directly with a mentor and received services that will you help you get to the next best place in your career. "</string>
    <string name="personalize">Personalize your search.</string>
    <string name="search_for_">Search for mentors in any field, and start learning how to get into the industry you want to work in.</string>
    <string name="dollar">$25.00</string>
    <string name="mentor_name">Frank Oboye,\ </string>
    <string name="mentor_occupation">UX Designer</string>
    <string name="profile_employment">Currently employed full-time at CBORD \nSince July 2018</string>
    <string name="see_av">See Availability</string>
    <string name="discount">Offers special discounts</string>
    <string name="night_session">Offers nightly sessions</string>
    <string name="intro_para">I offer services tailored to emerging professionals, including industry standard advice, portfolio design, and resume review services for the budding practitioner. I charge weekly and require an initial payment before our first consultation. \nAs part of my promise to you, I create a curriculum with your plans and goals in mind. I typically work with clients over a 4 to 6-week period and by the end of our collaboration, you\'ll have a portfolio and resume that is industry-ready.\n
</string>
    <string name="ser_1_des">A guided weekly website building and case study session from start to finish.</string>
    <string name="ser_2_des">A review of your resume and work experience in which I provide an overview of its potential value in the market.</string>
    <string name="ser_3_des">A guided weekly website building and case study session from start to finish.</string>
    <string name="social_text">View Frank\'s certifications and professional history.</string>
    <string name="prev_work_text">Frank\'s most recent projects can be viewed below.</string>
    <string name="reviews_text">See reviews left by mentees</string>
    <string name="rev_1_comment">Frank was super helpful with his experience and knowledge of the industry. With just 2 weeks of reviewing, I was able ...</string>
    <string name="rev_2_comment">Frank was super helpful with his experience and knowledge of the industry. With just 2 weeks of reviewing, I was able ...</string>
    <string name="keep_update">We’d like to keep you updated.</string>
    <string name="by_turning_on">By turning on your notification settings, you’ll know when your mentors are reaching out.</string>
    <string name="loc_ser">Turn on location services?</string>
    <string name="location_ser">Location services helps Proconomy find mentors near you and around the world.</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="resume_prep">Resume Prep 10 mentors available</string>
    <string name="backbutton">backbutton</string>
    <string name="complete_your_details">Complete your details</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="facebook_signin">Facebook_signin</string>
    <string name="google_signin">Google_signin</string>
    <string name="logo">Logo</string>
    <string name="your_desired_occupation">Your desired occupation</string>
    <string name="real_estate">Real-Estate</string>
    <string name="advertising">Advertising</string>
    <string name="fintech">FinTech</string>
    <string name="services_you_re_looking_for">Services you\'re looking for</string>
    <string name="finance">Finance</string>
    <string name="law">Law</string>
    <string name="technology">Technology</string>
    <string name="choose_up_to_3_items_that_best_describe_your_dream_industries">Choose up to 3 items that best describe your \'dream\' industries.</string>
    <string name="portfolio_review">Portfolio Review</string>
    <string name="career_advice">Career Advice</string>
    <string name="licenses_amp_certs"><![CDATA[Licenses & Certs]]></string>
    <string name="availability_you_ll_need">Availability you\'ll need</string>
    <string name="choose_how_much_time_you_need">Choose how much time you need.</string>
    <string name="select_up_to_3_tools_you_ll_need_to_succeed">Select up to 3 tools you\'ll need to succeed.</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="tell_us_about_yourself">Tell us about yourself.</string>
    <string name="i_m_currently">I\'m currently…</string>
</resources>